--- a/Pipfile
+++ b/Pipfile
@@ -10,8 +10,11 @@ contractions = "*"
 pandas = "*"
 ipykernel = "*"
 nbconvert = "*"
+keras = "*"
+scikit-learn = "*"
+tensorflow = "*"
 
 [dev-packages]
 
 [requires]
-python_version = "3.9"
+python_version = "3.8"
